template/deepseek-chat/row_133_update_3_template_20250510_131609.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Self-contained web server environment with VPC, EC2 instance running Apache/PHP'

Parameters:
  S3BucketName:
    Description: 'Name of the S3 bucket containing web content ZIP file'
    Type: String
    AllowedPattern: '^[a-z0-9.-]{3,63}$'
    ConstraintDescription: 'Must be a valid S3 bucket name (lowercase letters, numbers, hyphens, and periods)'
  S3ObjectKey:
    Description: 'Key/path of the ZIP file in S3 bucket'
    Type: String
    Default: 'webcontent.zip'
  InstanceType:
    Description: 'EC2 instance type'
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t2.small, t3.micro, t3.small]
    ConstraintDescription: 'Must be a valid EC2 instance type'
  KeyPairName:
    Description: 'Name of an existing EC2 KeyPair to enable SSH access'
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: 'Must be the name of an existing EC2 KeyPair'

Mappings:
  AWSRegionToAMI:
    us-east-1:
      AMI: 'ami-0c55b159cbfafe1f0'
    us-east-2:
      AMI: 'ami-0e83be366243f524a'
    us-west-1:
      AMI: 'ami-0f8e81a3da6e2510a'
    us-west-2:
      AMI: 'ami-03f65b8614a860c29'
    eu-west-1:
      AMI: 'ami-0d1cd67c26f5fca19'
    ap-southeast-1:
      AMI: 'ami-0e9d7a81a554902f8'

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: WebServerVPC

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: WebServerIGW

  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  DefaultRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: '10.0.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable HTTP and SSH access'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: WebServerSecurityGroup

  EC2Role:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      Path: '/'
      Policies:
        - PolicyName: 'S3AccessPolicy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: ['s3:GetObject']
                Resource: !Sub 'arn:aws:s3:::${S3BucketName}/${S3ObjectKey}'
              - Effect: Allow
                Action: ['s3:GetBucketLocation']
                Resource: !Sub 'arn:aws:s3:::${S3BucketName}'

  EC2InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: '/'
      Roles: [!Ref EC2Role]

  WebServer:
    Type: 'AWS::EC2::Instance'
    DependsOn: 
      - SubnetRouteTableAssociation
      - EC2InstanceProfile
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap [AWSRegionToAMI, !Ref 'AWS::Region', AMI]
      KeyName: !Ref KeyPairName
      DisableApiTermination: false
      BlockDeviceMappings:
        - DeviceName: '/dev/xvda'
          Ebs:
            VolumeSize: 8
            VolumeType: 'gp2'
            DeleteOnTermination: true
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet: [!Ref WebServerSecurityGroup]
          SubnetId: !Ref PublicSubnet
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
        - Key: Name
          Value: WebServerInstance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update -y
          yum install -y httpd php aws-cli unzip
          systemctl start httpd
          systemctl enable httpd
          aws s3 cp s3://${S3BucketName}/${S3ObjectKey} /tmp/webcontent.zip
          unzip -o /tmp/webcontent.zip -d /var/www/html/
          chown -R apache:apache /var/www/html
          systemctl restart httpd

Outputs:
  InstancePublicDNS:
    Description: 'Public DNS of the web server'
    Value: !GetAtt WebServer.PublicDnsName
  WebsiteURL:
    Description: 'URL of the website'
    Value: !Sub 'http://${WebServer.PublicDnsName}'
  PublicSubnetId:
    Description: 'ID of the public subnet'
    Value: !Ref PublicSubnet
  SecurityGroupId:
    Description: 'ID of the security group'
    Value: !Ref WebServerSecurityGroup
  VPCId:
    Description: 'ID of the VPC'
    Value: !Ref VPC
